[package]
name = "demo"
version = "0.1.0"
edition = "2021"
publish = false

[profile.dev]
debug = true
opt-level = 0

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
ratzilla = { path = "../../" }
tachyonfx = { version = "0.22.0", default-features = false, features = ["wasm"] }
web-time = "1.1.0"
examples-shared = { path = "../shared" }
# tui-big-text = "0.6.1"
